# Mark_Mirror

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/esp_app_smartconfig/: CMakeLists.txt  esp_app_smartconfig.c
components/esp_weather_time/: CMakeLists.txt  esp_weather_time.c
components/esp_weather_time/include/: esp_weather_time.h
components/get_weather_time/: CMakeLists.txt  esp_get_weather_time.c
components/get_weather_time/include/: esp_get_weather_time.h
components/gui/: gui_guider.h  setup_scr_main.c  setup_scr_screen.c
components/lcd_tft/: CMakeLists.txt  lv_port_disp.c  st7789.c
components/lcd_tft/include/: st7789.h
components/lv_fs_if/: CMakeLists.txt  lv_fs_fatfs.c
components/lv_lib_gif/: CMakeLists.txt  gifdec.c
components/lvgl_esp32_drivers/: CMakeLists.txt  lvgl_helpers.c
components/lvgl_esp32_drivers/lv_port/: esp_lcd_backlight.c
components/lvgl_esp32_drivers/lvgl_tft/: st7789.c
components/lvgl_fs/: CMakeLists.txt  lv_fs_fatfs.c  sd_card_main.c
components/lvgl_fs/include/: lv_fs_fatfs.h  (+1 more)
components/lvgl_gui/: CMakeLists.txt  gui_guider.c  gui_guider.h  gui_guider.py  setup_scr_main.c  setup_scr_table1.c
components/lvgl_gui/guider_fonts/: guider_fonts.h  lv_font_MiSans_Normal_20.c  lv_font_MiSans_Normal_40.c  lv_font_MiSans_Normal_75.c
components/lvgl_gui/images/: _hum_21x22.c  _temp_30x25.c
components/lvgl_port_driver/: CMakeLists.txt  lv_port_disp.c  st7789.c
components/mpu6050/: CMakeLists.txt  inv_mpu.c  inv_mpu_dmp_motion_driver.c  mpu6050.c  mpu6050.h
components/sd_card/: CMakeLists.txt  lv_port_fs.c  sd_card_main.c
components/wifi/: CMakeLists.txt  esp32_wifi_main.c
main/: CMakeLists.txt  app_main.c
main/include/: lvgl_app.h
main/include/smartconfig/: esp_app_smartconfig.h
main/src/: device_app.c  lvgl_app.c
main/src/smartconfig/: esp_app_smartconfig.c
(+5 files in other folders)
